--- a/dada/templates/list_options_screen.tmpl
+++ b/dada/templates/list_options_screen.tmpl
@@ -611,12 +611,12 @@
        <tr> 
         <td class="checkbox_container">
          <p>
-          <input type="checkbox" /> 	
+          <input type="checkbox" name="enable_mass_subscribe_only_w_root_login" id="enable_mass_subscribe_only_w_root_login" <!-- tmpl_if list_settings.enable_mass_subscribe_only_w_root_login -->checked="checked"<!-- /tmpl_if --> />
          </p>
         </td>
         <td>
         <p>
-            <label>
+            <label for="enable_mass_subscribe_only_w_root_login">
                 Only Allow when logged in with the Pro Dada Root Password
             </label>
         </p>
