--- a/dada/templates/membership_screen.tmpl
+++ b/dada/templates/membership_screen.tmpl
@@ -1,6 +1,8 @@
 <!-- begin membership_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Membership" -->
+<!-- tmpl_set name="load_jquery_validate" value="1" -->
+
 <div id="screen_meta" data-menu_highlight="view_list"></div>
 
 
@@ -315,20 +317,9 @@
 					 <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
 				<!-- /tmpl_if --> 
 
-				<!-- tmpl_unless root_login --> 
+				<!-- tmpl_if expr="(root_login == 1 || list_settings.allow_profile_editing == 1)" --> 
 
-					<!-- tmpl_loop fields --> 
-					    <p>
-					     <label for="<!-- tmpl_var name escape=HTML -->" class="label_profile_fields">
-					      <!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->): 
-					     </label>
-					    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" disabled="disabled" />
-					    </p>
-					<!--/tmpl_loop--> 
-
-				<!-- tmpl_else --> 
-
-					<p class="alert">
+                    <p class="alert">
 						Subscriber Profile Fields information will be changed for all Mailing Lists.
 					</p>
 					<!-- tmpl_loop fields --> 
@@ -344,10 +335,21 @@
 					    <!-- /tmpl_if -->
 					    </p>
 					<!--/tmpl_loop-->
+					
+				<!-- tmpl_else --> 
+                
+    				<!-- tmpl_loop fields --> 
+    				    <p>
+    				     <label for="<!-- tmpl_var name escape=HTML -->" class="label_profile_fields">
+    				      <!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->): 
+    				     </label>
+    				    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" disabled="disabled" />
+    				    </p>
+    				<!--/tmpl_loop--> 
 
-				<!-- /tmpl_unless --> 
+				<!-- /tmpl_if --> 
 
-				<!-- tmpl_if root_login --> 
+				<!-- tmpl_if expr="(root_login == 1 || list_settings.allow_profile_editing == 1)" --> 
 					 <div class="buttonfloat">
 					  <input type="submit" value="Edit Information" class="cautionary" />
 					 </div>
@@ -363,7 +365,7 @@
 					<fieldset> 
 					<legend>Profile Password</legend>
 
-					<!-- tmpl_if root_login --> 
+					<!-- tmpl_if expr="(root_login == 1 || list_settings.allow_profile_editing == 1)" --> 
 
 						<div id="change_profile_password_button">
 							<input type="button" value="Click to Change Profile Password..." class="cautionary change_profile_password" /> 
