A little spiffing up

--- a/dada/templates/change_password_screen.tmpl
+++ b/dada/templates/change_password_screen.tmpl
@@ -1,8 +1,12 @@
 <!-- begin change_password_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="You Mailing List &#187; List Password" -->
-<div id="screen_meta" data-menu_highlight="change_password"></div>
 
+<!-- tmpl_set name="load_jquery_validate" value="1" -->
+
+
+<div id="screen_meta" data-menu_highlight="change_password"></div>
+<div id="change_password"></div>
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
@@ -11,14 +15,30 @@
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div> 
 
+
+
+
 <div class="clearskiesbox">
+    
+    <!-- tmpl_if root_Login --> 
+    
+        <p>
+            The <strong>List Password</strong> is used to log into the mailing list, with restricted permissions 
+            on what features are available in the list control panel. Log into a mailing list with the 
+            <strong><!-- tmpl_var PROGRAM_NAME --> Root Password</strong> for unrestricted access to all the 
+            features of the list control panel.
+        </p>
+        
+    <!-- /tmpl_if -->
+        
+        
 <p>
- After you have changed your Mailing List Password, you will 
- be required to log back into your Mailing List control panel, using your new Mailing  List Password.
+ Once you've changed the <strong>List Password</strong>, you will 
+ be required to log back into the Mailing List control panel, using the newly changed <strong>List Password</strong>.
 </p>
 </div>
 
-<form name="default_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
+<form name="change_password_form" id="change_password_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 
 
 <fieldset> 
@@ -30,7 +50,7 @@
 <!-- tmpl_unless root_login -->
 	
 	<p>
-	 Enter your old <label for="old_password">password</label>:
+	 Enter the current <label for="old_password">List Password</label>:
 	 <br />
 	 <input type="password" id="old_password" name="old_password" maxlength="24" />
 	</p>
@@ -39,14 +59,14 @@
 
 <p>
  <label for="new_password">
-  Enter your new password</label>:
+  Enter the new List Password</label>:
  <br />
  <input type="password" name="new_password" id="new_password" size="16" maxlength="24" />
 </p>
 
 <p>
  <label for="again_new_password">
-  Re-enter your new password</label>:
+  Re-enter the new List Password</label>:
  <br />
  <input type="password" name="again_new_password" id="again_new_password" size="16" maxlength="24" />
 </p>
