--- a/dada/templates/new_list_screen.tmpl
+++ b/dada/templates/new_list_screen.tmpl
@@ -185,10 +185,18 @@
 
 		<div class="clearskiesbox">
 		 <p>
-		  The List Password is used to protect your Mailing List.</p>
+		  The <strong>List Password</strong> can be used to log into this 
+		  mailing list's list control panel, usually with restrictions on what can be 
+		  accessed and what features are enabled. 
+		 </p>
+		 <p>
+		     To have all access to all screens and have all features enabled, log
+		     into a mailing list with the <strong> <!-- tmpl_var PROGRAM_NAME --> Root Password</strong>. 
+		 </p> 
+		 
 		
 		<p>Please make 
-		  your List Password hard to guess, using upper and lowercase letters 
+		  the List Password hard to guess, using upper and lowercase letters 
 		  mixed with numbers. The List Password should be no more than 
 		  16 characters long.
 		 </p>
